fix capture  image

--- a/Simple Paint/Simple Paint.vcxproj.filters
+++ b/Simple Paint/Simple Paint.vcxproj.filters
@@ -104,7 +104,7 @@
     </Image>
   </ItemGroup>
   <ItemGroup>
-    <Manifest Include="App.Manifest">
+    <Manifest Include="App.manifest">
       <Filter>Resource Files</Filter>
     </Manifest>
   </ItemGroup>
