--- a/Simple Paint/Simple Paint.vcxproj
+++ b/Simple Paint/Simple Paint.vcxproj
@@ -178,7 +178,7 @@
     <Image Include="small.ico" />
   </ItemGroup>
   <ItemGroup>
-    <Manifest Include="App.Manifest" />
+    <Manifest Include="App.manifest" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
